<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".SyntaxActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/javaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/java_syntax"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/javaDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/java_syntax"
            android:textSize="30sp"
            android:layout_below="@id/javaText" />

        <TextView
            android:id="@+id/layoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/javaDetail"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/layout_syntax"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/layoutDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/layout_syntax"
            android:textSize="30sp"
            android:layout_below="@id/layoutText" />

        <Button
            android:id="@+id/btn_kembali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutDetail"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="launchDetailActivity"
            android:text="@string/kembali"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</android.support.v7.widget.CardView>